--- a/test.ipynb
+++ b/test.ipynb
@@ -119,9 +119,50 @@
     "\t\tcam_renderer.update_scene(hr_data, camera='camera_rgb')\n",
     "\t\tcam_pixels = cam_renderer.render()\n",
     "\t\tcamera_frames.append(cam_pixels)\n",
+    "media.show_video(camera_frames, fps=fps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/kkatodus/hellorobot/mujoco_py/mujo_venv/lib/python3.12/site-packages/stretch_urdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "import importlib.resources as importlib_resources\n",
     "\n",
-    "media.show_video(camera_frames, fps=fps)\n",
-    "# media.show_video(\"camera_frames.mp4\", frames, fps=fps)"
+    "pkg_path = str(importlib_resources.files(\"stretch_urdf\"))\n",
+    "print(pkg_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "urdf_file_path: /home/kkatodus/hellorobot/mujoco_py/mujo_venv/lib/python3.12/site-packages/stretch_urdf/SE3/stretch_description_SE3_eoa_wrist_dw3_tool_sg3.urdf\n",
+      "mesh_files_directory_path: /home/kkatodus/hellorobot/mujoco_py/mujo_venv/lib/python3.12/site-packages/stretch_urdf/SE3/meshes\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = 'SE3' # RE1V0, RE2V0, SE3\n",
+    "tool_name = 'eoa_wrist_dw3_tool_sg3' # eoa_wrist_dw3_tool_sg3, tool_stretch_gripper, etc\n",
+    "urdf_file_path = pkg_path + f\"/{model_name}/stretch_description_{model_name}_{tool_name}.urdf\"\n",
+    "mesh_files_directory_path = pkg_path + f\"/{model_name}/meshes\"\n",
+    "print('urdf_file_path:', urdf_file_path)\n",
+    "print('mesh_files_directory_path:', mesh_files_directory_path)"
    ]
   },
   {
