--- a/test.ipynb
+++ b/test.ipynb
@@ -12,12 +12,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# PATHS\n",
-    "HR_MODEL_PATH = \"hello_robot_stretch/stretch.xml\""
+    "HR_MODEL_PATH = \"hello_robot_stretch/stretch.xml\"\n",
+    "HR_URDF_PATH = 'mujo_venv/lib/python3.12/site-packages/stretch_urdf/SE3/stretch_description_SE3_eoa_wrist_dw3_tool_sg3.urdf'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n",
+      "WARNING: Geom with duplicate name '' encountered in URDF, creating an unnamed geom.\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Error: resource not found via provider or OS filesystem: 'mujo_venv/lib/python3.12/site-packages/stretch_urdf/SE3/base_link_collision.STL'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m hr_model \u001b[38;5;241m=\u001b[39m \u001b[43mmujoco\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMjModel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_xml_path\u001b[49m\u001b[43m(\u001b[49m\u001b[43mHR_URDF_PATH\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mValueError\u001b[0m: Error: resource not found via provider or OS filesystem: 'mujo_venv/lib/python3.12/site-packages/stretch_urdf/SE3/base_link_collision.STL'"
+     ]
+    }
+   ],
+   "source": [
+    "hr_model = mujoco.MjModel.from_xml_path(HR_URDF_PATH)"
    ]
   },
   {
@@ -27,7 +91,7 @@
    "outputs": [],
    "source": [
     "hr_model = mujoco.MjModel.from_xml_path(HR_MODEL_PATH)\n",
-    "hr_data = mujoco.MjData(hr_model)\n"
+    "hr_data = mujoco.MjData(hr_model)"
    ]
   },
   {
